force-app/main/default/objects/DWCustomerProductSummary__c/DWCustomerProductSummary__c.object-meta.xml
<CustomObject>
    <label>DWCustomerProductSummary</label>
    <nameField>
        <label>DWCustomerProductSummary</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DWCustomerProductSummary</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>