force-app/main/default/objects/DWCustomerProductSummary__c/fields/CUST_PRD_GRP_CYTD_NETSALES_DIFF__c.field-meta.xml
<CustomField>
    <fullName>CUST_PRD_GRP_CYTD_NETSALES_DIFF__c</fullName>
    <formula>CUST_PRD_GRP_NetSales_CYTD__c - CUST_PRD_GRP_NetSales_PYTD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CUST_PRD_GRP_CYTD_NETSALES_DIFF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>