force-app/main/default/objects/DWCustomerProductSummary__c/fields/CUST_PRD_GRP_NetSales_CYTD__c.field-meta.xml
<CustomField>
    <fullName>CUST_PRD_GRP_NetSales_CYTD__c</fullName>
    <label>CUST_PRD_GRP_NetSales_CYTD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>