force-app/main/default/objects/DWCustomerProductSummary__c/fields/CUSTOMER_ACCOUNT_OPENED_DATE__c.field-meta.xml
<CustomField>
    <fullName>CUSTOMER_ACCOUNT_OPENED_DATE__c</fullName>
    <label>Account Opened Date</label>
    <type>Date</type>
</CustomField>