force-app/main/default/objects/DWCustomerProductSummary__c/fields/CUSTOMER_KEY__c.field-meta.xml
<CustomField>
    <fullName>CUSTOMER_KEY__c</fullName>
    <label>CUSTOMER_KEY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>