force-app/main/default/objects/DWCustomerProductSummary__c/fields/CUSTOMER_REF__c.field-meta.xml
<CustomField>
    <fullName>CUSTOMER_REF__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>DWCustomer__c</referenceTo>
    <relationshipLabel>DWCustomerProductSummary</relationshipLabel>
    <relationshipName>DWCustomer</relationshipName>
    <type>Lookup</type>
</CustomField>