force-app/main/default/objects/DWCustomerProductSummary__c/fields/CUSTOMER_TYPE__c.field-meta.xml
<CustomField>
    <fullName>CUSTOMER_TYPE__c</fullName>
    <label>Customer Market</label>
    <length>30</length>
    <type>Text</type>
</CustomField>