force-app/main/default/objects/DWCustomerProductSummary__c/fields/First_Sale_Date_Account_Opened_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Sale_Date_Account_Opened_Date__c</fullName>
    <formula>TEXT(SOLDTO_FIRST_SALE_DATE__c) &amp; &quot; / &quot;&amp; TEXT(CUSTOMER_ACCOUNT_OPENED_DATE__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Sale Date / Account Opened Date</label>
    <type>Text</type>
</CustomField>