force-app/main/default/objects/DWCustomerProductSummary__c/fields/Growth_FY__c.field-meta.xml
<CustomField>
    <fullName>Growth_FY__c</fullName>
    <formula>NetSales_CY__c-NetSales_PY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>$ Growth</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>