force-app/main/default/objects/DWCustomerProductSummary__c/fields/Growth_YTD__c.field-meta.xml
<CustomField>
    <fullName>Growth_YTD__c</fullName>
    <formula>NetSales_CYTD__c-NetSales_PYTD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>$ Growth YTD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>