force-app/main/default/objects/DWCustomerProductSummary__c/fields/ITEM__c.field-meta.xml
<CustomField>
    <fullName>ITEM__c</fullName>
    <label>Item</label>
    <length>255</length>
    <type>Text</type>
</CustomField>