force-app/main/default/objects/DWCustomerProductSummary__c/fields/NetSales_ALL_PY__c.field-meta.xml
<CustomField>
    <fullName>NetSales_ALL_PY__c</fullName>
    <label>NetSales_ALL_PY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>