force-app/main/default/objects/DWCustomerProductSummary__c/fields/NetSales_CY__c.field-meta.xml
<CustomField>
    <fullName>NetSales_CY__c</fullName>
    <label>Sales This Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>