force-app/main/default/objects/DWCustomerProductSummary__c/fields/NetSales_CYTD__c.field-meta.xml
<CustomField>
    <fullName>NetSales_CYTD__c</fullName>
    <label>Sales This YTD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>