force-app/main/default/objects/DWCustomerProductSummary__c/fields/Pct_Growth_YTD__c.field-meta.xml
<CustomField>
    <fullName>Pct_Growth_YTD__c</fullName>
    <formula>IF(NetSales_PYTD__c &lt;&gt; 0,(NetSales_CYTD__c-NetSales_PYTD__c)/NetSales_PYTD__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Growth</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>