force-app/main/default/objects/DWCustomerProductSummary__c/fields/PRODUCT_GROUP__c.field-meta.xml
<CustomField>
    <fullName>PRODUCT_GROUP__c</fullName>
    <label>Product Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>