force-app/main/default/objects/DWCustomerProductSummary__c/fields/PRODUCT_GROUP_CODE__c.field-meta.xml
<CustomField>
    <fullName>PRODUCT_GROUP_CODE__c</fullName>
    <label>Product Group Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>