force-app/main/default/objects/DWCustomerProductSummary__c/fields/PRODUCT_KEY__c.field-meta.xml
<CustomField>
    <fullName>PRODUCT_KEY__c</fullName>
    <label>PRODUCT_KEY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>