force-app/main/default/objects/DWCustomerProductSummary__c/fields/QUANTITY_CY__c.field-meta.xml
<CustomField>
    <fullName>QUANTITY_CY__c</fullName>
    <label>This Year Qty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>