force-app/main/default/objects/DWCustomerProductSummary__c/fields/QUANTITY_CYTD__c.field-meta.xml
<CustomField>
    <fullName>QUANTITY_CYTD__c</fullName>
    <label>This YTD Qty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>