force-app/main/default/objects/DWCustomerProductSummary__c/fields/QUANTITY_PY__c.field-meta.xml
<CustomField>
    <fullName>QUANTITY_PY__c</fullName>
    <label>Last Year Qty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>