force-app/main/default/objects/DWCustomerProductSummary__c/fields/QUANTITY_PYTD__c.field-meta.xml
<CustomField>
    <fullName>QUANTITY_PYTD__c</fullName>
    <label>Last YTD Qty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>