force-app/main/default/objects/DWCustomerProductSummary__c/fields/SALES_PERSON__c.field-meta.xml
<CustomField>
    <fullName>SALES_PERSON__c</fullName>
    <label>Sales Person</label>
    <length>255</length>
    <type>Text</type>
</CustomField>