force-app/main/default/objects/DWCustomerProductSummary__c/fields/SALES_PERSON_CODE__c.field-meta.xml
<CustomField>
    <fullName>SALES_PERSON_CODE__c</fullName>
    <label>SALES_PERSON_CODE</label>
    <length>5</length>
    <type>Text</type>
</CustomField>