force-app/main/default/objects/DWCustomerProductSummary__c/fields/SALES_PERSON_REF__c.field-meta.xml
<CustomField>
    <fullName>SALES_PERSON_REF__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Sales Person</label>
    <referenceTo>DWSalesPerson__c</referenceTo>
    <relationshipLabel>Customer Salesperson</relationshipLabel>
    <relationshipName>DWCustomerProductSalesPerson</relationshipName>
    <type>Lookup</type>
</CustomField>