force-app/main/default/objects/DWCustomerProductSummary__c/fields/SOLDTO_CUSTOMER__c.field-meta.xml
<CustomField>
    <fullName>SOLDTO_CUSTOMER__c</fullName>
    <label>Sold To Customer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>