force-app/main/default/objects/DWCustomerProductSummary__c/fields/SOLDTO_CUSTOMER_CODE__c.field-meta.xml
<CustomField>
    <fullName>SOLDTO_CUSTOMER_CODE__c</fullName>
    <label>SoldTo Customer Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>