force-app/main/default/objects/DWCustomerProductSummary__c/fields/SOLDTO_FIRST_SALE_DATE__c.field-meta.xml
<CustomField>
    <fullName>SOLDTO_FIRST_SALE_DATE__c</fullName>
    <label>SoldTo First Sale Date</label>
    <type>Date</type>
</CustomField>