force-app/main/default/objects/DWCustomerProductSummary__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SOLDTO_CUSTOMER__c</columns>
    <columns>SOLDTO_CUSTOMER_CODE__c</columns>
    <columns>PRODUCT_GROUP__c</columns>
    <columns>PRODUCT_GROUP_CODE__c</columns>
    <columns>SALES_PERSON__c</columns>
    <columns>NetSales_PYTD__c</columns>
    <columns>NetSales_CYTD__c</columns>
    <columns>NetSales_ALL_PY__c</columns>
    <columns>CUST_PRD_GRP_NetSales_PYTD__c</columns>
    <columns>CUST_PRD_GRP_NetSales_CYTD__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>