force-app/main/default/objects/DWCustomerProductSummary__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>SALES_PERSON_REF__c</columns>
    <columns>SALES_PERSON__c</columns>
    <columns>SOLDTO_CUSTOMER__c</columns>
    <columns>SOLDTO_CUSTOMER_CODE__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>